--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Zen Compass</string>
     <string name="hello_world">Hello World!</string>
     <string name="description_compass_background">Compass Background</string>
+    <string name="menu_close">Close Menu</string>
 </resources>
